      an error. 
  b - fixed kill_delay. In order to fix and not change behavior, added 
      the parameter $kill_delay to mom's config. Activate by setting to true
  b - commented out a 'fi' left uncommented in contrib/init/pbs_server
  e - mapped 'qsub -P user:group' to qsub -P user -W group_list=group
  e - added -DQSUBHOSTNAME to allow qsub to determine PBS_O_HOST

2.4.7
  b - fixed a bug for when a resource_list has been set, but isn't completely
      initialized, causing a segfault
  b - stop counting down walltime remaining after a job is completed
  b - correctly display the number for tasks as used in TORQUE in qstat -a output
  b - no longer ignoring fread return values in linux cpuset code (gcc 4.3.3)
  b - fixed a bug where job was added to obit retry list multiple times, causing
      a segfault
  b - Fix for Bugzilla bug 43. "configure ignores with-modulefiles=no"
  b - no longer try to decide when to start with -t create in init.d scripts, 
      -t creates should be done manually by the user
  b - no longer let qsub determine the PBS_O_HOST. This work is done on the server
      and the server code accounts for the connection interface as well as aliasing.
      Code to set PBS_O_HOST on the server is already there, but now will be active.
  f - added -P to qsub. When submitting a job as root, the root user may add -P
      <username> to submit the job as the proxy user specified by <usermname>
  n - 2.4.7 released on 29-03-10

2.4.6
  f - added an asynchronous option for qsig, specified with -a.
  b - fix to cleanup job that is left in running state after a mom restart
  e - qsub's -W can now parse attributes with quoted lists, for example: 
      qsub script -W attr="foo,foo1,foo2,foo3" will set foo,foo1,foo2,foo3
      as attr's value.
  e - qstat -f now includes an extra field "Walltime Remaining" that tells 
      the remaining walltime in seconds. This field is does not account for
      weighted walltime.