@@ -934,6 +934,12 @@ void remove_job_delete_nanny(
 
   struct work_task *pwtiter, *pwtdel;
 
+  if (pjob->ji_svrtask.ll_next == NULL)
+    {
+    /* no nanny, nothing to delete */
+    return;
+    }
+
   pwtiter = (struct work_task *)GET_NEXT(pjob->ji_svrtask);
 
   while (pwtiter != NULL)
